- Glacier.getIceSpeed(x,z) calls getIceThickness which does interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- remove unused images (eg, penguin)


DONE:
7/23/08 - brute force workaround for valley elevation at x<0, linear interpolation between manually-created sample points
******* 0.00.36 (23398)
7/22/08 - hide icons for "coordinates" and "ice flow" check boxes in Intro tab
7/22/08 - verify that all feature for July 25 milestone work properly when clock is paused
7/22/08 - update SnowfallNode only when its visible
7/22/08 - clip SnowfallNode to the atmosphere
7/22/08 - lower the elevation where white-out occurs at max snowfall
7/22/08 - simulate snowfall using a rectangle that covers the valley, filled with a gradient paint, vary alpha based on snowfall (not clipped to atmosphere)
7/22/08 - fix: Reset All feature was broken in version 0.00.32, button didn't do anything
******* 0.00.35 (23376)
7/22/08 - make drill, thickness tool, thermometer, and flag snap to x=0 when dropped at x<0
7/22/08 - make glacial budget meter show "?" for x<0
******* 0.00.34 (23372)
7/22/08 - workaround: for all x<0, use Valley.getElevation(0) (until we have a model for x<0 that matches background images and works with tools)
7/21/08 - fix: right arrow should have same maxX constraint as pan control
******* 0.00.33 (23363)
7/21/08 - size of mountains.png exceeds JVM heap space, chop down the image as much as possible
7/21/08 - make default clock speed 2 years per sec (2 fps)
7/21/08 - don't draw x coordinate axis for x < 0
7/21/08 - temporarily remove snowfall node
7/21/08 - remove tools from bird-eye view, they are too small to be usable
7/21/08 - move x=0 further to the right in birds-eye viewport