@@ -6,6 +6,7 @@ import java.awt.geom.Point2D;
 import java.util.ArrayList;
 import java.util.Iterator;
 
+import edu.colorado.phet.glaciers.GlaciersConstants;
 import edu.colorado.phet.glaciers.model.Glacier.GlacierAdapter;
 import edu.colorado.phet.glaciers.model.Glacier.GlacierListener;
 
@@ -59,10 +60,16 @@ public class BoreholeDrill extends AbstractTool {
     //----------------------------------------------------------------------------
     
     protected void constrainDrop() {
-        // constrain x to >= headwall
-        double x = Math.max( getX(), _glacier.getHeadwallX() );
+
+        double x = getX();
+        if ( GlaciersConstants.SNAP_TOOLS_TO_HEADWALL ) {
+            // constrain x to >= headwall
+            x = Math.max( getX(), _glacier.getHeadwallX() );
+        }
+        
         // snap y to glacier surface
         double surfaceElevation = _glacier.getSurfaceElevation( x );
+        
         setPosition( x, surfaceElevation );
     }
     
