@@ -6,6 +6,7 @@ import java.awt.geom.Point2D;
 import java.util.ArrayList;
 import java.util.Iterator;
 
+import edu.colorado.phet.glaciers.GlaciersConstants;
 import edu.colorado.phet.glaciers.model.Climate.ClimateAdapter;
 import edu.colorado.phet.glaciers.model.Climate.ClimateListener;
 
@@ -77,10 +78,16 @@ public class Thermometer extends AbstractTool {
     //----------------------------------------------------------------------------
     
     protected void constrainDrop() {
-        // constrain x to >= headwall
-        double x = Math.max( getX(), _glacier.getHeadwallX() );
+
+        double x = getX();
+        if ( GlaciersConstants.SNAP_TOOLS_TO_HEADWALL ) {
+            // constrain x to >= headwall
+            x = Math.max( getX(), _glacier.getHeadwallX() );
+        }
+        
         // constrain y to just above the ice surface
         double surfaceElevation = _glacier.getSurfaceElevation( x );
+        
         if ( getX() < x || getY() <= surfaceElevation ) {
             setPosition( x, surfaceElevation + 100 );
         }
